# retro_vault

./: .gitignore  README.md  launcher.py  pyproject.toml  test_roms.sample.json
.github/workflows/: ci.yml
docs/: PR12_HARDWARE_VALIDATION.md  THIRD_PARTY_LICENSES.md  competitive-research-and-ideas.md  implementation-plans.md
packaging/linux/: retrovault.desktop
packaging/windows/: build.ps1  entrypoint.py  retrovault.spec  setup.iss
retrovault/: __init__.py  __main__.py  ui_tk.py
retrovault/core/: audit.py  config.py  launch.py  library.py  media.py  paths.py
retrovault/data/: profiles.json  recommendations.json  scraper.json  systems.json
retrovault/input/: __init__.py  actions.py  backend.py  diagnostic.py  router.py  sdl_backend.py
retrovault/platform/: __init__.py  (+2 more)
tests/: conftest.py  manual_real_install_smoke.py  test_audit.py  test_config.py  test_detail_panel.py  test_diagnostic.py  test_dialog_nav.py  test_discovery.py  test_fullscreen_policy.py  test_fullscreen_profiles.py  test_game_options.py  test_input_contract.py  test_installer.py  test_launch.py  test_launch_controller_assist.py  test_launch_overlay.py  test_launch_session.py  test_launch_types.py  test_library.py  test_library_model.py  test_library_thumbnails.py  test_libretro_scraper.py  test_main_menu.py  test_main_window_favorites.py  test_main_window_nav.py  test_media.py  test_onscreen_keyboard.py  test_paths.py  test_platform.py  test_play_time_tracking.py  test_providers.py  test_retroarch_preference.py  test_router.py  test_scrape_merge.py  test_scraper.py  test_sdl_backend.py  test_session_integration.py  test_settings_redetect.py  test_setup_wizard.py  test_ui_smoke.py  (+1 more)
(+24 files in other folders)
